--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.12"
+    "@tailwindcss/vite": "^4.1.6",
+    "astro": "^5.7.12",
+    "marked": "^15.0.11",
+    "tailwindcss": "^4.1.6"
   }
 }
